--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,19 +53,19 @@
     <UnityVersion>2020.3.25f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\Resources\AbilityIcon.cs" />
+    <Compile Include="Assets\Scripts\Ability\Hit.cs" />
+    <Compile Include="Assets\Scripts\AbilityIcon.cs" />
     <Compile Include="Assets\Scripts\Ability\BaseHit.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\BlinkDistance.cs" />
     <Compile Include="Assets\Scripts\Ability\FatalAttraction.cs" />
     <Compile Include="Assets\Scripts\PlayerAbilitySelector.cs" />
     <Compile Include="Assets\Scripts\Ability\Cyclone.cs" />
-    <Compile Include="Assets\Scripts\HP.cs" />
-    <Compile Include="Assets\Scripts\CameraTracking.cs" />
     <Compile Include="Assets\Scripts\EnemyMove.cs" />
-    <Compile Include="Assets\Scripts\Ability\Hit.cs" />
     <Compile Include="Assets\Scripts\AttackZone.cs" />
+    <Compile Include="Assets\Scripts\HP.cs" />
     <Compile Include="Assets\Scripts\EnemySpawner.cs" />
+    <Compile Include="Assets\Scripts\CameraTracking.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
